--- a/api/qsharp/microsoft.quantum.intrinsic.rz.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.rz.yml
@@ -2,12 +2,12 @@
 uid: microsoft.quantum.intrinsic.rz
 name: Rz
 type: operation
-namespace: Microsoft.Quantum.Intrinsic
+namespace: microsoft.quantum.intrinsic
 summary: >-
   按给定角度向 $z $ 轴旋转。
 
 
-  \begin{align} R_z （\theta） \mathrel{： =} e ^ {-i \theta \ sigma_z/2} = \begin{bmatrix} e ^ {-i \theta/2} & 0 \\ \\ 0 & e ^ {i \theta/2} \end{bmatrix}。
+  \begin{align} R_z ( \theta) \mathrel{： =} e ^ {-i \theta \ sigma_z/2} = \begin{bmatrix} e ^ {-i \theta/2} & 0 \\ \\ 0 & e ^ {i \theta/2} \end{bmatrix}。
 
   \end{align}
 remarks: >-
@@ -40,9 +40,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 8ab20bd25777abfcdef4ce79b112173d7de9ba4c
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 5d88af70316ca85299b5c141ebbfd9d071ed320e
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674118"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89346471"
