--- a/api/qsharp/microsoft.quantum.intrinsic.x.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.x.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.intrinsic.x
 name: X
 type: operation
-namespace: Microsoft.Quantum.Intrinsic
+namespace: microsoft.quantum.intrinsic
 summary: >-
   将 Pauli $X $ 入口。
 
@@ -27,9 +27,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 73fcf60bf676d9c25f09009fcaf13dda4237f01b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 7e92a1f632691a78d5db42782e447f4ebf90b6c3
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82686804"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89346369"
