--- a/api/qsharp/microsoft.quantum.math.plusa.yml
+++ b/api/qsharp/microsoft.quantum.math.plusa.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.math.plusa
 name: PlusA
 type: function
-namespace: Microsoft.Quantum.Math
-summary: 返回两个输入的总和（串联）。
+namespace: microsoft.quantum.math
+summary: 返回两个输入 (串联) 的总和。
 syntax: "function PlusA (a : 'Element[], b : 'Element[]) : 'Element[]"
 input:
   content: "(a : 'Element[], b : 'Element[])"
@@ -29,9 +29,9 @@ typeParameters:
 - uid: "'Element"
   summary: 两个输入数组中每个元素的类型。
 metadata:
-  ms.openlocfilehash: bf52166cbd0331b6c6a8c49a00bd343913344a41
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 8b729c0c76a12c52beb83313500fbe6c39609f69
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82684149"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89333755"
