--- a/api/qsharp/microsoft.quantum.math.powcp.yml
+++ b/api/qsharp/microsoft.quantum.math.powcp.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.math.powcp
 name: PowCP
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回一个数的指定幂。
 syntax: 'function PowCP (a : Microsoft.Quantum.Math.ComplexPolar, power : Microsoft.Quantum.Math.ComplexPolar) : Microsoft.Quantum.Math.ComplexPolar'
 input:
@@ -19,9 +19,9 @@ output:
   - summary: Power $a ^ b $
     uid: microsoft.quantum.math.complexpolar
 metadata:
-  ms.openlocfilehash: eaed2cd971f0f4e66c02350bf8191bf7a77db92b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: a89aa9bbd25308c5e9a7dd7682d1e557b79b5527
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681572"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89333418"
