--- a/api/qsharp/microsoft.quantum.math.signd.yml
+++ b/api/qsharp/microsoft.quantum.math.signd.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.math.signd
 name: SignD
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回指示数字符号的整数。
-remarks: 有关更多详细信息，请参阅[system.object](https://docs.microsoft.com/dotnet/api/system.math.sign) 。
+remarks: 有关更多详细信息，请参阅 [system.object](https://docs.microsoft.com/dotnet/api/system.math.sign) 。
 syntax: 'function SignD (a : Double) : Int'
 input:
   content: '(a : Double)'
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: d89cf48fd68e907a94d408b871e5f33dac1d8bfd
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e84c738c7bcf865f1cb2c20d50fad0347a52c3bb
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681459"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89333075"
