--- a/api/qsharp/microsoft.quantum.arithmetic.reflectaboutinteger.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.reflectaboutinteger.yml
@@ -2,12 +2,12 @@
 uid: microsoft.quantum.arithmetic.reflectaboutinteger
 name: ReflectAboutInteger
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
+namespace: microsoft.quantum.arithmetic
 summary: >-
   反映给定的传统整数的量程寄存器。
 
 
-  给定一个量程寄存器，最初处于状态 $ \ sum_i \ alpha_i \ket{i} $，其中每个 $ \ket{i} $ 是表示整数 $i $ 的基本状态，它反映了给定整数 $ \ket{j} $、$ $ \ sum_i （-1） ^ {\ delta_ {ij}} \ alpha_i \ket{i} $ $ 的基本状态的寄存器状态
+  给定一个量程寄存器，最初处于状态 $ \ sum_i \ alpha_i \ket{i} $，其中每个 $ \ket{i} $ 是表示整数 $i $ 的基本状态，它反映了给定整数 $ \ket{j} $，$ $ \ sum_i ( 的基本状态的寄存器状态，) ^ {\ delta_ {ij}} \ alpha_i \ket{i} $ $
 remarks: 此操作就地实现，无需显式分配额外的辅助 qubits。
 syntax: 'operation ReflectAboutInteger (index : Int, reg : Microsoft.Quantum.Arithmetic.LittleEndian) : Unit'
 input:
@@ -28,9 +28,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 7d63f4f3d4f05aa91305c057badbe329f3561bbd
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: f7f26677218b816ae27baee2a0fdde1504619d28
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85884656"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89353254"
