--- a/api/qsharp/microsoft.quantum.intrinsic.resetall.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.resetall.yml
@@ -2,14 +2,14 @@
 uid: microsoft.quantum.intrinsic.resetall
 name: ResetAll
 type: operation
-namespace: Microsoft.Quantum.Intrinsic
+namespace: microsoft.quantum.intrinsic
 summary: 给定一个 qubits 数组，对其进行度量，确保它们处于 | 0 ⟩状态，以便可以安全地释放它们。
 syntax: 'operation ResetAll (qubits : Qubit[]) : Unit'
 input:
   content: '(qubits : Qubit[])'
   types:
   - name: qubits
-    summary: 其状态将重置为 $ \ket{0}$ 的 qubits 的数组。
+    summary: 其状态将重置为 $ \ket $ 的 qubits 的数组 {0} 。
     isArray: true
     isPrimitive: true
     uid: Qubit
@@ -19,9 +19,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: 772e17c45a08698e4323c63344d1d8ca5be7926b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e24244519f933e2a8527f8e1837017566120ca30
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82683709"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89346658"
