--- a/api/qsharp/microsoft.quantum.intrinsic.rx.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.rx.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.intrinsic.rx
 name: Rx
 type: operation
-namespace: Microsoft.Quantum.Intrinsic
-summary: "按给定角度向 $x $ 轴旋转。\n\n\\begin{align} R_x （\\theta） \\mathrel{： =} e ^ {-i \\theta \\ sigma_x/2} = \\begin{bmatrix} \\cos \\frac{\\theta}{2} &-i\\sin \\frac{\\theta}{2} \\\\ \\\\ -i\\sin \\frac{\\theta}{2} & \\cos \\frac{\\theta}{2} \\end{bmatrix}。  \n\\end{align}"
+namespace: microsoft.quantum.intrinsic
+summary: "按给定角度向 $x $ 轴旋转。\n\n\\begin{align} R_x ( \\theta) \\mathrel{： =} e ^ {-i \\theta \\ sigma_x/2} = \\begin{bmatrix} \\cos \\frac{\\theta} {2} &-i\\sin \\frac{\\theta} {2} \\\\ \\\\ -i\\sin \\frac{\\theta} {2} & \\cos \\frac{\\theta} {2} \\end{bmatrix}。  \n\\end{align}"
 remarks: >-
   等效于：
 
@@ -34,9 +34,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 7a205e787e79743cad3f40e978f459d0f42a8100
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: df0884ddba4b104f875db5179c808c5a7695170c
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82683662"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89346505"
