--- a/api/qsharp/microsoft.quantum.intrinsic.s.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.s.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.intrinsic.s
 name: S
 type: operation
-namespace: Microsoft.Quantum.Intrinsic
+namespace: microsoft.quantum.intrinsic
 summary: >-
   将 S 入口应用于单个 qubit。
 
@@ -27,9 +27,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 1e42056d91daac49fab6a4488bd0ef7c27698027
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: eb0b9525aba5e218fb5b71e0b5bdcb04547360fc
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85885705"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89346437"
