--- a/api/qsharp/microsoft.quantum.intrinsic.swap.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.swap.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.intrinsic.swap
 name: SWAP
 type: operation
-namespace: Microsoft.Quantum.Intrinsic
+namespace: microsoft.quantum.intrinsic
 summary: >-
   将交换入口应用于一对 qubits。
 
@@ -45,9 +45,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: e8e2681cef50354ac0e6807304912fcddcc0361b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 46790a007bf48b7bfff11e92d7379f24676b81e3
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82681770"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89346420"
