--- a/api/qsharp/microsoft.quantum.intrinsic.t.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.t.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.intrinsic.t
 name: T
 type: operation
-namespace: Microsoft.Quantum.Intrinsic
+namespace: microsoft.quantum.intrinsic
 summary: >-
   将 T 入口应用于单个 qubit。
 
@@ -27,9 +27,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: d149038bea705d10a67197e0eeece33ef98e6c36
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: 801ed8fac44b49e723f4aafe371128560a167a02
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85885686"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89346386"
